test/classes/initializers/parent-access.good
parent-access.chpl:20: error: Cannot access parent field 'a' during phase 1
